# telemetry-adapter

./: README.md  docker-compose.yml
telemetry-adapter/: .env  Dockerfile  README.md  main.py  pyproject.toml  run.sh
telemetry-adapter/alembic/: env.py
telemetry-adapter/alembic/versions/: c7ae6a3d004a_create_a_submission_table.py
telemetry-adapter/app/: asgi.py  logger.py  settings.py
telemetry-adapter/app/api/: endpoints.py
telemetry-adapter/app/infrastructure/clients/: exceptions.py  interfaces.py  sqs.py
telemetry-adapter/app/worker/: worker.py
telemetry-adapter/app/worker/infrastructure/: event_streamer.py  types.py
telemetry-adapter/app/worker/infrastructure/clients/: exceptions.py  interfaces.py  kinesis.py  postgres.py  session_manager.py  sqs.py
telemetry-adapter/app/worker/services/: exceptions.py  submission.py
