[tool.poetry]
name = "telemetry-adapter"
version = "0.1.0"
description = ""
authors = ["Andrey Arakelyants"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.34"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
aiobotocore = "^2.12.0"
psycopg = "^3.1.18"
psycopg-pool = "^3.2.1"
psycopg-binary = "^3.1.18"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
